<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".letscook.recipe.SuggestedRecipesActivity">
    <TextView
        android:id="@+id/tvRgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Order"
        android:layout_alignParentTop="true"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/rgColumn"
        android:layout_below="@id/tvRgHeader">

        <RadioButton android:id="@+id/radioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes_name"
            android:onClick="onOrderColumnClicked"
            android:checked="true"/>
        <RadioButton android:id="@+id/radioDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes_difficulty"
            android:onClick="onOrderColumnClicked"/>
        <RadioButton android:id="@+id/radioTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes_time"
            android:onClick="onOrderColumnClicked"/>
    </RadioGroup>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/rgOrder"
        android:layout_below="@id/rgColumn">
        <RadioButton android:id="@+id/radioAscending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes_ascending"
            android:onClick="onOrderClicked"
            android:checked="true"/>
        <RadioButton android:id="@+id/radioDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes_descending"
            android:onClick="onOrderClicked" />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/rgOrder"
        android:id="@+id/seperator"/>
    <ListView
        android:layout_marginTop="4dp"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/seperator"/>
</RelativeLayout>
