<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rup.tho.cocook.letscook.recipe.RecipeActivity">
    <TextView
        android:id="@+id/tvDescriptionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="@string/recipe_description"
        android:layout_alignParentTop="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tvDescriptionHeader"
        android:id="@+id/seperatorDescription"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:textSize="18dp"
        android:text="@string/recipe_no_description"
        android:layout_below="@id/seperatorDescription"/>

    <TextView
        android:id="@+id/tvIngredientHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="@string/recipe_header"
        android:layout_below="@id/tvDescription"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tvIngredientHeader"
        android:id="@+id/seperatorIngredients"/>
    <ListView
        android:layout_marginTop="4dp"
        android:id="@+id/listIngredients"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/seperatorIngredients"
        android:listSelector="@android:color/transparent"/>
</RelativeLayout>
