<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rup.tho.cocook.MainActivity">


    <LinearLayout
        android:id="@+id/layoutStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:background="@color/main_back"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:textSize="80sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_restaurant_menu_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="50dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_restaurant_menu_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>


        <Button
            android:id="@+id/btLetsCook"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_start"
            android:onClick="onMenuButtonClick"
            android:text="@string/main_cook"
            android:textColor="@color/font_color"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btYourFridge"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_start"
            android:onClick="onMenuButtonClick"
            android:text="@string/main_your_fridge"
            android:textColor="@color/font_color"
            android:textSize="22sp" />
        />

        <Button
            android:id="@+id/btDosDonts"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_start"
            android:onClick="onMenuButtonClick"
            android:text="@string/main_dos_donts"
            android:textColor="@color/font_color"
            android:textSize="22sp" />

        <!--  <Button
             android:id="@+id/btMealHistory"
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:background="@drawable/button_start"
             android:onClick="onMenuButtonClick"
             android:text="@string/main_history"
             android:textColor="@color/font_color"
             android:textSize="22sp" />
         />

        <Button
             android:id="@+id/btSettings"
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:background="@drawable/button_start"
             android:onClick="onMenuButtonClick"
             android:text="@string/main_settings"
             android:textColor="@color/font_color"
             android:textSize="22sp" />
         />-->

        <Button
            android:id="@+id/btAbout"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_start"
            android:onClick="onMenuButtonClick"
            android:text="@string/main_about"
            android:textColor="@color/font_color"
            android:textSize="22sp" />
        />
    </LinearLayout>
</RelativeLayout>
